Fixed some bad styling in the calendar button dropdown in the timeline.  Changed the animation 'Play' button to say 'Resume' instead if the animation has been paused but not stopped.  Also changed the animation buttons to labels so they no longer keep their focus once they are clicked.

--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -92,17 +92,19 @@
 
             label {
                 &.start-date {
+                    margin-top: 15px;
                     width: 250px;
                 }
 
                 &.end-date {
-                    width: 115px;
+                    margin-top: 15px;
+                    width: 125px;
                 }
             }
 
-            button {
-                margin-left: 5px;
-                margin-bottom: 5px;
+            .datetimepicker {
+                float: left;
+                margin-right: 5px;
             }
         }
     }
