--- a/app/css/style.less
+++ b/app/css/style.less
@@ -416,6 +416,15 @@ button {
         white-space: nowrap;
     }
 
+    .filter-lg-label {
+        float: left;
+        padding: 4px 8px;
+        max-width: 200px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+    }
+
     .glyphicon {
         float: left;
         padding: 7px 8px;
