NEON-1691 Add pointer cursor over selectable items in visualizations

--- a/app/css/directives/countBy.less
+++ b/app/css/directives/countBy.less
@@ -72,6 +72,10 @@
         .slick-sortable-placeholder{
             background: @border-color;
         }
+
+        .slick-header-sortable {
+            cursor: pointer;
+        }
     }
 
     .slick-row {
