--- a/app/css/directives/queryResultsTable.less
+++ b/app/css/directives/queryResultsTable.less
@@ -93,6 +93,12 @@
         &.odd {
             background: @main-background;
         }
+
+        &.selectable {
+            .slick-cell {
+                cursor: pointer;
+            }
+        }
     }
 
     .slick-header{
