--- a/app/css/directives/sunburst.less
+++ b/app/css/directives/sunburst.less
@@ -26,7 +26,8 @@
         opacity: .8;
 
         &:hover {
-          opacity: 1;
+            opacity: 1;
+            cursor: pointer;
         }
     }
 
@@ -47,6 +48,10 @@
 .sunburst-controls  {
     width:100%;
     margin-bottom: 10px;
+
+    label:hover {
+        cursor: pointer;
+    }
 }
 
 .sunburst-tooltip {
