--- a/app/css/style.less
+++ b/app/css/style.less
@@ -971,6 +971,10 @@ tr.borderedRow {
         fill: @chart-text-color;
         fill-opacity: 0.3;
     }
+
+    rect.background {
+        cursor: pointer !important;
+    }
 }
 
 .neon-datetimepicker {
