--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -30,6 +30,7 @@
         position: absolute;
         pointer-events: none;
         white-space: nowrap;
+        z-index: 1060;
 
         .graph-tooltip-block {
             text-align: center;
