--- a/app/css/directives/map.less
+++ b/app/css/directives/map.less
@@ -228,7 +228,7 @@
 
     .olPopup {
         font-size: 12px;
-        z-index: 1060;
+        z-index: 1060 !important;
 
         table {
             margin: 2px;
