Adding elasticsearch to the database type menu

--- a/app/partials/directives/databaseConfig.html
+++ b/app/partials/directives/databaseConfig.html
@@ -57,6 +57,7 @@
                                 <select class="form-control" ng-model="datastoreType">
                                     <option value="mongo">Mongo</option>
                                     <option value="sparksql">Spark SQL</option>
+                                    <option value="elasticsearch">Elasticsearch</option>
                                 </select>
                             </div>
                         </div>
