Added a flag field to the graph to determine whether nodes are given one of two colors.  Currently using this to show whether retweeted users exist in the dataset by referencing a precalculated boolean field.

--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -33,6 +33,7 @@
         z-index: 1060;
 
         .graph-tooltip-block {
+            line-height: 30px;
             text-align: center;
 
             .graph-tooltip-label {
