--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -26,7 +26,7 @@
         color: @light-text-color;
         font-size: 15px;
         font-weight: bold;
-        padding: 5px;
+        padding: 0px 5px 5px;
         position: absolute;
         pointer-events: none;
         white-space: nowrap;
