NEON-1688 Added a legend to the graph for the different node colors.  Also removed some unused CSS classes in the directives.

--- a/app/css/directives/directedGraph.less
+++ b/app/css/directives/directedGraph.less
@@ -63,4 +63,14 @@
     .node-text {
       cursor: pointer;
     }
+
+    .legend {
+        /* Override the default legend styling from the style.less file. */
+        margin-bottom: 0px;
+        min-height: 0px;
+
+        .legend-item {
+            margin-top: 0px;
+        }
+    }
 }
