--- a/app/partials/directives/barchart.html
+++ b/app/partials/directives/barchart.html
@@ -47,7 +47,7 @@
 
         <div class="legend-item" title="{{getLegendText()}}">
             <span class="legend-icon" style="background-color: #39b54a"></span>
-            <span class="legend-text legend-text-large" ng-bind="getLegendText()"></span>
+            <span class="legend-text" ng-bind="getLegendText()"></span>
         </div>
 
     </div>
